--- a/etc/snippet-vex.html
+++ b/etc/snippet-vex.html
@@ -164,6 +164,9 @@
 <li>switch같은곳은 작아서 Ctrl+E로 확대해서 편집하자</li>
 <li>if(a==b, 1, 2) 같은 식으로 넣을 수 도 있음.</li>
 </ul>
+<h3 id="현재-노드-이름"><a class="header" href="#현재-노드-이름">현재 노드 이름</a></h3>
+<pre><code class="language-vex">string current_node_name = split(opfullpath("."), "/")[-1]; // $OS
+</code></pre>
 <h3 id="라인에서-사이-각-구하기"><a class="header" href="#라인에서-사이-각-구하기">라인에서 사이 각 구하기</a></h3>
 <pre><code class="language-vex">int ptnum_prev;
 int ptnum_next;
