--- a/script/vex.html
+++ b/script/vex.html
@@ -451,7 +451,8 @@ int nearPointNumber = nearpoint(1, currP);
 // 1번 지오메트리의 nearpointNumber의 _id값.
 int id = point(1, "_id", nearPointNumber);
 </code></pre>
-<p>float xyzdist(geometry, originVector)</p>
+<p>float xyzdist(geometry, originVector)
+primuv()</p>
 <p>expression - opinputpath(name, index) : input에 연결된 노드의 경로 값을 가져옴
 opinputpath(".", 0) 현재노드의 0번째(첫번째) 입력</p>
 <p>@opinput‹n›_‹name›
@@ -511,7 +512,10 @@ if (len(pts) &lt; 3)
 </code></pre>
 <p>pcimportbyidxf
 pcfilter
-pciterate</p>
+pciterate
+pcfind
+pcimport
+pcnumfound</p>
 <h2 id="제어"><a class="header" href="#제어">제어</a></h2>
 <ul>
 <li>https://www.sidefx.com/docs/houdini/vex/statement.html</li>
