--- a/etc/snippet.html
+++ b/etc/snippet.html
@@ -159,8 +159,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="팁"><a class="header" href="#팁">팁</a></h1>
-<ul>
-<li>이전 버전 노드가 안보일때는
+<h3 id="이전-버전-노드가-안보일때는"><a class="header" href="#이전-버전-노드가-안보일때는">이전 버전 노드가 안보일때는</a></h3>
 <ul>
 <li>Assets &gt; Asset Definition Toolbar &gt; Show Always</li>
 <li>예)
@@ -170,35 +169,32 @@
 </ul>
 </li>
 </ul>
-</li>
-<li>선을 나누기 : resample</li>
-<li>Rigid body dynamics : RBD to FBX</li>
+<h3 id="color-correction"><a class="header" href="#color-correction">Color correction</a></h3>
+<ul>
 <li>감마: Edit&gt; Color Settings&gt; Color correction&gt; Gamma&gt; 1
 <ul>
 <li><a href="https://www.sidefx.com/docs/houdini/render/linear.html">https://www.sidefx.com/docs/houdini/render/linear.html</a></li>
 </ul>
 </li>
-<li>각도설정
+</ul>
+<h3 id="circle을-사용한-각도설정"><a class="header" href="#circle을-사용한-각도설정">Circle을 사용한 각도설정</a></h3>
 <ul>
 <li>copytopoint로 circle을 점에 붙인다</li>
 <li>carve의 U를 이용 각도를 가진 점을 얻고 - 포인트가 0부터 시작하는걸 변하게 하는게 좋을듯</li>
 <li>점과 점을 merge</li>
 <li>add로 선을 이어주자 - polygons &gt; By Group</li>
 </ul>
-</li>
-<li>어트리뷰트 비쥬얼라이제이션
+<h3 id="어트리뷰트-비쥬얼라이제이션"><a class="header" href="#어트리뷰트-비쥬얼라이제이션">어트리뷰트 비쥬얼라이제이션</a></h3>
 <ul>
 <li>포인트 번호 표시해주는 툴바에 visualization 우클릭</li>
 </ul>
-</li>
-<li>디버그용 선을 이어보기
+<h3 id="디버그용-선을-이어보기"><a class="header" href="#디버그용-선을-이어보기">디버그용 선을 이어보기</a></h3>
 <ul>
 <li>어트리뷰트를 이용하여 정보용 점을 추가로 만들고</li>
 <li>merge</li>
 <li>Add&gt; By Group&gt; Add&gt; By Attribute&gt; Attribute Name 설정</li>
 </ul>
-</li>
-<li>grid를 텍스쳐로 굽기
+<h3 id="grid를-텍스쳐로-굽기"><a class="header" href="#grid를-텍스쳐로-굽기">grid를 텍스쳐로 굽기</a></h3>
 <ul>
 <li><a href="https://blog.naver.com/checkjei/222622327344">https://blog.naver.com/checkjei/222622327344</a></li>
 <li>geo &gt; grid / uvtexture / attribvop</li>
@@ -217,9 +213,9 @@
 </li>
 <li>Render to Disk 버튼 클릭</li>
 </ul>
-</li>
-<li>https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html
+<h3 id="유니티-소스-컨트롤"><a class="header" href="#유니티-소스-컨트롤">유니티 소스 컨트롤</a></h3>
 <ul>
+<li>https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html</li>
 <li><UnityProject>/heu_session.txt : 현재 세션 정보를 저장하는 데 사용하는 임시 파일
 <ul>
 <li>.gitignore 할것</li>
@@ -248,8 +244,7 @@
 </ul>
 </li>
 </ul>
-</li>
-<li>두 점 사이의 점
+<h3 id="두-점-가운데에-점-찍기"><a class="header" href="#두-점-가운데에-점-찍기">두 점 가운데에 점 찍기</a></h3>
 <ul>
 <li>subdivide로 가운데 점 찍고</li>
 <li>delete
@@ -261,8 +256,6 @@
 <li>Operation : Delete by Range</li>
 <li>Start/End : 1</li>
 <li>Select _ of _ : 1 / 3</li>
-</ul>
-</li>
 </ul>
 </li>
 </ul>
@@ -301,14 +294,146 @@
 <li>Box에 Facet(Post-Compute Normal)로 노말을 주고, Group(Keep By Normal)로 상단점을 선택후 Wrangle(@P.z = 0;)로 가운데로 뭉치고 Fuse로 중복을 없에 텐트모양을 만든다.</li>
 </ul>
 </li>
-<li></li>
 </ul>
 <hr />
-<ul>
-<li>백틱(``) : 이름 활용</li>
-</ul>
+<h3 id="백틱--이름-활용-예제"><a class="header" href="#백틱--이름-활용-예제">백틱(``) : 이름 활용 예제</a></h3>
 <pre><code class="language-txt">example_`rint(fit01(rand(detail("../foreach_begin2_metadata1/", "iteration", 0)), 1, 5))`
 </code></pre>
+<h3 id="성능-모니터"><a class="header" href="#성능-모니터">성능 모니터</a></h3>
+<ul>
+<li>Performance monitor pane
+<ul>
+<li><a href="https://www.sidefx.com/docs/houdini/ref/panes/perfmon.html">https://www.sidefx.com/docs/houdini/ref/panes/perfmon.html</a></li>
+<li>Windows &gt; Performance Monitor Alt + Y</li>
+</ul>
+</li>
+</ul>
+<h3 id="이동회전-행렬-활용"><a class="header" href="#이동회전-행렬-활용">이동/회전 행렬 활용</a></h3>
+<pre><code class="language-vex">// matrix  maketransform(int trs, int xyz, vector t, vector r, vector s)
+// matrix  maketransform(vector zaxis, vector yaxis, vector translate)
+
+matrix location_matrix = maketransform(
+    XFORM_TRS,
+    XFORM_XYZ,
+    p0,
+    {0, 0, 0}
+);
+matrix rotation_matrix = maketransform(right, world_up, {0, 0, 0});
+matrix m = rotation_matrix * location_matrix;
+
+@P = invert(m);
+@P = m;
+</code></pre>
+<h3 id="상단-면-중앙에-점-찍기"><a class="header" href="#상단-면-중앙에-점-찍기">상단 면 중앙에 점 찍기</a></h3>
+<ul>
+<li>vex 방식
+<pre><code class="language-vex">if (@N.y &gt; 0.1)
+{
+    string prim_str = itoa(@primnum);
+    vector center = getbbox_center(0, prim_str);
+    addpoint(0, center);
+}
+</code></pre>
+</li>
+<li>노드 방식
+<ul>
+<li>blast/name/foreach(primitive)/extractcentroid 방식</li>
+</ul>
+</li>
+</ul>
+<h3 id="카메라를-통한-디버그-메시지-보여주기"><a class="header" href="#카메라를-통한-디버그-메시지-보여주기">카메라를 통한 디버그 메시지 보여주기</a></h3>
+<ul>
+<li>카메라노드에서 Edit Render Properties
+<ul>
+<li>Viewport Display &gt; OpenGL View &gt; Viewport Comment 추가해서 내용 입력하면 씬뷰에서 나타남. (``을 사용하여 vex코드 삽입가능)</li>
+</ul>
+</li>
+</ul>
+<h3 id="분홍색-마크"><a class="header" href="#분홍색-마크">분홍색 마크</a></h3>
+<ul>
+<li>Display Option : Marker
+<ul>
+<li>Set display option for : Tempalte Model Geometry 설정 바꿔주면 분홍색 마크시 보여지는거 달라지게 됨.</li>
+</ul>
+</li>
+</ul>
+<h3 id="이미지-카메라-매칭"><a class="header" href="#이미지-카메라-매칭">이미지 카메라 매칭</a></h3>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=qWD1nRqf2bk">Houdini Image Camera Matching</a>
+<ul>
+<li>houdini Perspective Match</li>
+<li><a href="https://pixabay.com/photos/lost-places-hall-columns-pforphoto-2963764/">https://pixabay.com/photos/lost-places-hall-columns-pforphoto-2963764/</a></li>
+<li><a href="https://fspy.io/">https://fspy.io/</a>
+<ul>
+<li><a href="https://github.com/stuffmatic/fSpy">https://github.com/stuffmatic/fSpy</a></li>
+</ul>
+</li>
+<li><a href="https://www.andre-gaschler.com/rotationconverter/">https://www.andre-gaschler.com/rotationconverter/</a>
+<ul>
+<li>Input angle format / Output angle format을 Degree로 설정</li>
+</ul>
+</li>
+<li>이미지를 fspy로 불러와서 앵글을 잡는다
+<ul>
+<li>Vanishing points axes
+<ul>
+<li>1 : x</li>
+<li>2 : -z</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>후디니
+<ul>
+<li>카메라 View
+<ul>
+<li>bacgkround image에 이미지 깔아주고</li>
+<li>resolution에 fspy Image Width/Height</li>
+<li>aperture에 fspy Focal length - Sensor.x</li>
+<li>Focal Length에 fspy Focal length - Value (mm)</li>
+</ul>
+</li>
+<li>카메라 Transform
+<ul>
+<li>Translate:
+<ul>
+<li>fspy Camera position x/y/z</li>
+</ul>
+</li>
+<li>Rotation
+<ul>
+<li>fspy의 Camera Orientation (Axis angle (degrees))를 rotationconverter에 복사(x/y/z/angle)</li>
+<li>rotationconverter의 Axis with angle magnitude (radians) [x, y, z]</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="https://github.com/Njordy/nLib">https://github.com/Njordy/nLib</a>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=rVduzdrKYZg&amp;t=171s">https://www.youtube.com/watch?v=rVduzdrKYZg&amp;t=171s</a></li>
+</ul>
+</li>
+</ul>
+<h3 id="houdini_path"><a class="header" href="#houdini_path">HOUDINI_PATH</a></h3>
+<ul>
+<li>New Pane Tab Type &gt; Misc &gt; Textport
+<ul>
+<li>echo $HOUDINI_PATH</li>
+</ul>
+</li>
+<li>New Pane Tab Type &gt; Python Shell
+<ul>
+<li>hou.getenv("HOUDINI_PATH")</li>
+<li>hou.houdiniPath()</li>
+</ul>
+</li>
+</ul>
+<hr />
+<h3 id="todo"><a class="header" href="#todo">TODO</a></h3>
 <ul>
 <li>
 <p>blast</p>
@@ -326,7 +451,6 @@
 </ul>
 </li>
 </ul>
-<hr />
 <p>vex연습</p>
 <ul>
 <li>
@@ -373,143 +497,6 @@ else
 <li>scale
 <ul>
 <li>detail(opinputpath(".", 0), "project_size", 0)</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<hr />
-<ul>
-<li>Performance monitor pane
-<ul>
-<li>https://www.sidefx.com/docs/houdini/ref/panes/perfmon.html</li>
-<li>Windows &gt; Performance Monitor Alt + Y</li>
-</ul>
-</li>
-</ul>
-<hr />
-<pre><code class="language-vex">matrix  maketransform(int trs, int xyz, vector t, vector r, vector s)
-matrix  maketransform(vector zaxis, vector yaxis, vector translate)
-
-matrix location_matrix = maketransform(
-    XFORM_TRS,
-    XFORM_XYZ,
-    p0,
-    {0, 0, 0}
-);
-matrix rotation_matrix = maketransform(right, world_up, {0, 0, 0});
-matrix m = rotation_matrix * location_matrix;
-@P = invert(m);
-@P = m;
-</code></pre>
-<hr />
-<p>상단 면 중앙에 점 찍기
-vex 방식
-if (@N.y &gt; 0.1)
-{
-string prim_str = itoa(@primnum);
-vector center = getbbox_center(0, prim_str);
-addpoint(0, center);
-}
-blast/name/foreach(primitive)/extractcentroid 방식</p>
-<hr />
-<ul>
-<li>카메라를 통한 디버그 메시지 보여주기
-<ul>
-<li>카메라노드에서 Edit Render Properties
-<ul>
-<li>Viewport Display &gt; OpenGL View &gt; Viewport Comment 추가해서 내용 입력하면 씬뷰에서 나타남. (``을 사용하여 vex코드 삽입가능)</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<hr />
-<ul>
-<li>분홍색 마크
-<ul>
-<li>Display Option : Marker
-<ul>
-<li>Set display option for : Tempalte Model Geometry 설정 바꿔주면 분홍색 마크시 보여지는거 달라지게 됨.</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<hr />
-<ul>
-<li><a href="https://www.youtube.com/watch?v=qWD1nRqf2bk">Houdini Image Camera Matching</a>
-<ul>
-<li>houdini Perspective Match</li>
-<li>https://pixabay.com/photos/lost-places-hall-columns-pforphoto-2963764/</li>
-<li>https://fspy.io/
-<ul>
-<li>https://github.com/stuffmatic/fSpy</li>
-</ul>
-</li>
-<li>https://www.andre-gaschler.com/rotationconverter/
-<ul>
-<li>Input angle format / Output angle format을 Degree로 설정</li>
-</ul>
-</li>
-<li>이미지를 fspy로 불러와서 앵글을 잡는다
-<ul>
-<li>Vanishing points axes
-<ul>
-<li>1 : x</li>
-<li>2 : -z</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>후디니
-<ul>
-<li>카메라 View
-<ul>
-<li>bacgkround image에 이미지 깔아주고</li>
-<li>resolution에 fspy Image Width/Height</li>
-<li>aperture에 fspy Focal length - Sensor.x</li>
-<li>Focal Length에 fspy Focal length - Value (mm)</li>
-</ul>
-</li>
-<li>카메라 Transform
-<ul>
-<li>Translate:
-<ul>
-<li>fspy Camera position x/y/z</li>
-</ul>
-</li>
-<li>Rotation
-<ul>
-<li>fspy의 Camera Orientation (Axis angle (degrees))를 rotationconverter에 복사(x/y/z/angle)</li>
-<li>rotationconverter의 Axis with angle magnitude (radians) [x, y, z]</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>https://github.com/Njordy/nLib
-<ul>
-<li>https://www.youtube.com/watch?v=rVduzdrKYZg&amp;t=171s</li>
-</ul>
-</li>
-</ul>
-<hr />
-<ul>
-<li>HOUDINI_PATH
-<ul>
-<li>New Pane Tab Type &gt; Misc &gt; Textport
-<ul>
-<li>echo $HOUDINI_PATH</li>
-</ul>
-</li>
-<li>New Pane Tab Type &gt; Python Shell
-<ul>
-<li>hou.getenv("HOUDINI_PATH")</li>
-<li>hou.houdiniPath()</li>
 </ul>
 </li>
 </ul>
