--- a/script/hscript-expression.html
+++ b/script/hscript-expression.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>hscript - study.houdini</title>
+        <title>hscript expression - study.houdini</title>
 
 
         <!-- Custom HTML head -->
@@ -129,7 +129,7 @@
                         <a href="https://github.com/netpyoung/study.houdini" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/netpyoung/study.houdini/edit/main/src/script/hscript.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/netpyoung/study.houdini/edit/main/src/script/hscript-expression.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+                        <h1 id="hscript-expressions"><a class="header" href="#hscript-expressions">HScript expressions</a></h1>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>$N</td><td>'npoints(0)-1</td></tr>
 </tbody></table>
 </div>
@@ -206,6 +207,7 @@ $BBZ = relbbox(@P).z
 https://www.sidefx.com/docs/houdini/expressions/detail.html
 opinputpath
 https://www.sidefx.com/docs/houdini/expressions/opinputpath.html</p>
+<p>padzero</p>
 
                     </main>
 
